--- a/packages/components/button/package.json
+++ b/packages/components/button/package.json
@@ -7,6 +7,10 @@
   "scripts": {
     "build": "rimraf dist && rollup --config"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vik-mol/ui-kit"
+  },
   "author": "",
   "license": "ISC",
   "peerDependencies": {
