--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@storybook/test": "^8.6.8",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "@vik-mol/type-declarations": "^0.1.1",
     "@vitest/browser": "^3.0.9",
     "@vitest/coverage-v8": "^3.0.9",
     "lerna": "^8.2.1",
