feat(button): use sharet type declaration

--- a/packages/components/button/tsconfig.json
+++ b/packages/components/button/tsconfig.json
@@ -16,8 +16,9 @@
     "skipLibCheck": true,
     "declaration": true,
     "target": "es6",
-    "outDir": "dist"
+    "outDir": "dist",
+    "types": ["@vik-mol/type-declarations"]
   },
-  "include": ["declaration.d.ts", "src"],
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
