--- a/packages/components/button/package.json
+++ b/packages/components/button/package.json
@@ -9,6 +9,13 @@
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "@vik-mol/type-declarations": "^0.1.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.8.2"
+  },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
     "react-dom": "^18.0.0 || ^19.0.0"
