--- a/packages/components/button/package.json
+++ b/packages/components/button/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vik-mol/type-config": "^0.0.1",
     "@vik-mol/type-declarations": "^0.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
