--- a/packages/components/button/package.json
+++ b/packages/components/button/package.json
@@ -5,15 +5,17 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rimraf dist && rollup --config"
+    "build": "rimraf dist &&  rollup-builder --input ./src/index.ts"
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
   "devDependencies": {
     "@vik-mol/type-config": "^0.0.1",
     "@vik-mol/type-declarations": "^0.1.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
     "rimraf": "^6.0.1",
     "typescript": "^5.8.2"
   },
