--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@vitest/coverage-v8": "^3.0.9",
     "lerna": "^8.2.1",
     "playwright": "^1.51.1",
+    "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "rollup": "^4.36.0",
     "rollup-plugin-postcss": "^4.0.2",
