--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -2,29 +2,22 @@ name: Deploy Storybook
 
 on:
   push:
-    branches: [gh-pages]
+    branches:
+      - master
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Set up Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: Install dependencies
+      - name: Install Dependencies
         run: npm install
 
       - name: Build Storybook
-        run: |
-          cd ui-kit
-          npm install
-          npm run storybook:build
+        run: npm run build:storybook
 
       - name: Deploy to GitHub Pages
         run: npx gh-pages -d ui-kit/storybook-static
