--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -17,7 +17,7 @@ jobs:
         run: npm install
 
       - name: Build Storybook
-        run: npm run build:storybook
+        run: npm run storybook:build
 
       - name: Deploy to GitHub Pages
         run: npx gh-pages -d ui-kit/storybook-static
