fix: install classnames

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "vitest": "^3.0.9"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   }
