--- a/packages/components/little-chart/package.json
+++ b/packages/components/little-chart/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "classnames": "^2.5.1"
   },
   "devDependencies": {
     "@vik-mol/type-config": "^0.0.1",
@@ -21,7 +22,8 @@
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0"
+    "react-dom": "^18.0.0 || ^19.0.0",
+    "classnames": "^2.5.1"
   },
   "repository": {
     "type": "git",
