--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "version": "lerna version --yes",
     "publish": "dotenv -e .env -- lerna publish from-git --yes",
     "release": "lerna run build && npm run version && npm run publish",
-    "storybook:build": "storybook build -o storybook-static",
+    "storybook:build": "storybook build",
     "storybook:dev": "storybook dev -p 6006",
     "storybook:deploy": "gh-pages -d ui-kit/storybook-static"
   },
