chore: upgrage storybook

--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Build Storybook
         run: npm run storybook:build
 
-      - name: Deploy 🚀
+      - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
