--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.2",
     "@storybook/addon-essentials": "^8.6.8",
+    "@storybook/addon-onboarding": "^8.6.11",
     "@storybook/blocks": "^8.6.8",
+    "@storybook/experimental-addon-test": "^8.6.11",
     "@storybook/react": "^8.6.8",
     "@storybook/react-vite": "^8.6.8",
     "@storybook/test": "^8.6.8",
